<resources>
    <string name="app_name">Men Photo Suite Editor</string>
    <string name="mirror">Mirror</string>
    <string name="save">Save</string>
    <string name="magic">Magic</string>
    <string name="update_text">New version available. Please update app</string>
    <string name="update_button">UPDATE</string>
    <string name="appfeedback">App Feedback</string>
    <string name="appfeedback_text">Please give us your feedback we will improve</string>
        <string name="admob_app_id">ca-app-pub-9569880823887785~3835805670</string>
        <string name="admob_banner_id">ca-app-pub-9569880823887785/4765743964</string>
        <string name="admob_interstitial_id">ca-app-pub-9569880823887785/1948008931</string>
        <string name="admob_reward_id">ca-app-pub-9569880823887785/5695682258</string>
        <string name="admob_native_id">ca-app-pub-9569880823887785/1756437242</string>
        <string name="admob_app_open">ca-app-pub-9569880823887785/9479192202</string>
    <string name="cancel">Cancel</string>
    <string name="permission_request">Permission request.</string>
    <string name="permission_request_msg">With out permission app won\'t work properly.</string>
    <string name="no_internet">Check internet connection!</string>
    <string name="ok">OK</string>
    <string name="ad_attribution">Ad</string>
    <string name="hangover_studios">Hangover Studios</string>
    <string name="back">Back</string>
    <string name="adv_edit">Edit</string>
    <string name="zoom">zoom</string>
    <string name="restore">Restore</string>
    <string name="erase">Erase</string>
    <string name="lasso">Extract</string>
    <string name="done">Done</string>
    <string name="tutorial">Tutorial</string>
    <string name="inst_bw_btn">Click RESTORE button to restore image</string>
    <string name="inst_color_inside">Click below button to cut inside the path</string>
    <string name="inst_color_outside">Click below button to cut outside the path</string>
    <string name="inst_manual_btn">Click ERASE button to erase</string>
    <string name="inst_up_arrow">Click UP arrow to get options</string>
    <string name="inst_zoom_btn">Click ZOOM button to drag and zoom image.</string>
    <string name="offset">Offset</string>
    <string name="radius">Size</string>
    <string name="cut_inside">Cut Inside</string>
    <string name="cut_outside">Cut Outside</string>
    <string name="threshold">Threshold</string>
    <string name="auto">Auto</string>
    <string name="processing">processing</string>
    <string name="error">Error</string>
    <string name="image_saved">Image saved:</string>
    <string name="import_error">Error while getting image.</string>
    <string name="import_img_warning">Please import image!!!</string>
    <string name="importing_image">Importing image...</string>
    <string name="processing_image">Processing image...</string>
    <string name="redoing">Redoing</string>
    <string name="removing">Auto remove background</string>
    <string name="search_menu_title">Search</string>
    <string name="skip">Skip</string>
    <string name="smooth">Smooth</string>
    <string name="smoothning">Smoothening</string>
    <string name="some_tips">Some tips for you :-</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="targate_drag">Drag POINTER to select background.</string>
    <string name="tut_ext_msg">Skip Tutorial?</string>
    <string name="tut_ext_title">Tutorial</string>
    <string name="tut_msg">Let\'s get you started with a quick tutorial.</string>
    <string name="tut_title">Tutorial</string>
    <string name="undoing">Undoing</string>
    <string name="undoredo">- You can perform UNDO and REDO</string>
    <string name="zoom_pinch">Drag and pinch image to zoom.</string>
    <string name="ok_got_it">OK, Got It</string>
    <string name="compare_img">- You can also change brush SHAPE.</string>
    <string name="all_set">You are all set</string>
    <string name="drag_bw">Drag POINTER to restore image.</string>
    <string name="drag_color">Drag POINTER to erase.</string>
    <string name="draw_lasso">Draw a closed path.</string>
    <string name="cont">Continue</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="file_provider_authority" translatable="false">com.hangoverstudios.men.photo.suite.editor.app.fileprovider</string>
    <string name="error_img_not_found">Oops! please try again.</string>
    <string name="internal_storage">Internal storage</string>
    <string name="error_apply_effect">Oops! please try again.</string>
    <string name="please_wait">Please wait</string>
    <string name="exit_prompt">Are you sure that you want to close editor?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_media">Error: your SD-Card is not available.</string>
    <string name="saved">Please find your image at:\n:url:"</string>
    <string name="saved_2">Saved</string>
    <string name="save_failed">Oops! please try again.</string>
    <string name="redL">Red</string>
    <string name="greenL">Green</string>
    <string name="blueL">Blue</string>
    <string name="hue">Hue: :value:\u00B0</string>
    <string name="sat">Saturation: :value:%</string>
    <string name="brightness">Brightness: :value:%</string>
    <string name="contrast">Contrast: :value:</string>
    <string name="rotate">Angle: :value:\u00B0</string>
    <string name="flip_v">Horizon.</string>
    <string name="flip_h">Vertical</string>
    <string name="red">Red: :value:</string>
    <string name="green">Green: :value:</string>
    <string name="blue">Blue: :value:</string>
    <string name="redP">Red: :value:%</string>
    <string name="greenP">Green: :value:%</string>
    <string name="blueP">Blue: :value:%</string>
    <string name="cdepth">Color Depth: :value:</string>
    <string name="effect1">Brightness</string>
    <string name="effect2">Flip</string>
    <string name="effect3">Hue</string>
    <string name="effect4">Tint</string>
    <string name="effect5">Gamma</string>
    <string name="effect6">Invert</string>
    <string name="effect7">Grayscale</string>
    <string name="effect8">Sepia</string>
    <string name="effect9">Sharpen</string>
    <string name="effect10">Gau. Blur</string>
    <string name="effect11">C. Filter</string>
    <string name="effect12">C. Depth</string>
    <string name="effect13">Emboss</string>
    <string name="effect14">Boost</string>
    <string name="effect15">Noise</string>
    <string name="effect16">Sketch</string>
    <string name="effect17">Vignette</string>
    <string name="effect18">Saturation</string>
    <string name="effect19">Contrast</string>
    <string name="img_desc">Images</string>
    <string name="app_name_pro">Camera</string>
    <string name="app_name_track">App</string>
    <string name="no_whatsapp_app">No Whatsup app</string>
    <string name="no_facebook_app">No Facebook app</string>
    <string name="no_instagram_app">No Instagram App</string>
    <string name="saved_image_message">Photo saved successfully</string>
    <string name="tab_title_stores">Share</string>
    <string-array name="photo_main_layout_array">
        <item>Tools</item>
        <item>Blur</item>
        <item>Crop</item>
        <item>Background</item>
        <item>Frame</item>
        <item>Sticker</item>
        <item>Filter</item>
        <item>Fx</item>
        <item>Text</item>

    </string-array>
    <string-array name="blur_main_layout_array">
        <item>Layout</item>
        <item>Blur</item>
        <item>Background</item>
        <item>Space</item>
        <item>Sticker</item>
        <item>Filter</item>
        <item>FX</item>
        <item>Text</item>

    </string-array>
    <string name="settings_default_color_confirm">Default Color</string>
    <string name="settings_bg_color_confirm">Tap here to Confirm</string>
    <string name="settings_bg_color_dialog">Pick a Color</string>
    <string name="cancel_btn">Cancel</string>
    <string name="select_btn">Select</string>
    <string name="okay_text">Ok</string>
    <string name="camera_permission_required_msg">Camera Permission Required</string>
    <string name="camera_permission_granted_msg">Camera Permission Granted</string>
    <string name="camera_permission_not_granted_msg">Camera permission not granted</string>
    <string name="canvas_text_color">Color</string>
    <string name="preview_text">Preview Text</string>
    <string name="canvas_text_hint">Preview Text</string>
    <string name="canvas_text_enter_text">Please enter text</string>
    <string name="directory">Collage Photo Editor</string>
    <string name="select_more_apps">Select more apps</string>
    <string name="save_image_directory_error_message">image errror</string>
    <string name="loading_image">Loading image</string>
    <string name="effect_parameter_bundle_name">global_parameter</string>
    <string name="tilt_none">None</string>
    <string name="tilt_radial">Radial</string>
    <string name="tilt_linear">Linear</string>
    <string name="gallery_select_an_album">Select Album</string>
    <string name="gallery_no_more">No More %d item</string>
    <string name="gallery_select_one">Select %d item</string>
    <string name="changelog_full_title">Full Title</string>
    <string name="changelog_title">Change Log</string>
    <string name="changelog_show_full">Show Full</string>
    <string name="changelog_ok_button">Ok</string>
    <string name="crop_getting_image">Getting the cropped image!</string>
    <string name="hashtag_twitter">#tag</string>
    <string name="gallery_lib_max">Max %d</string>
    <string name="crop_file_name">.appdata</string>
    <string name="permission_education_message">"Photo access permission is required to create photo collages and to edit photos. Without this permission, application won't work!"</string>
    <string name="permission_education_title">Permission Denied</string>
    <string name="save_image_lib_no_camera">There is no Camera app to handle this request!</string>
    <string name="save_image_lib_no_gallery">There are no gallery applications installed.</string>
    <string name="collage_lib_delete_message">Do you want to delete image?</string>
    <string name="recommand_message">Let me recommend you this application!</string>
    <string name="facebook_app_id">251690453099227</string>
    <string name="fb_login_protocol_scheme">fb251690453099227</string>
    <string name="removing_background_please_wait">Removing background please wait..!</string>
    <string name="Struck">Struck</string>
    <string name="Clarendon">Clarendon</string>
    <string name="OldMan">OldMan</string>
    <string name="Mars">Mars</string>
    <string name="Rise">Rise</string>
    <string name="April">April</string>
    <string name="Amazon">Amazon</string>
    <string name="Starlit">Starlit</string>
    <string name="Whisper">Whisper</string>
    <string name="Lime">Lime</string>
    <string name="Haan">Haan</string>
    <string name="BlueMess">BlueMess</string>
    <string name="Adele">Adele</string>
    <string name="Cruz">Cruz</string>
    <string name="Metropolis">Metropolis</string>
    <string name="Audrey">Audrey</string>
    <string name="none">None</string>
    <string name="others">Others</string>
    <string name="telegram">Telegram</string>
    <string name="change_background">CHANGE BACKGROUND</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>