<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/activity_feather"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/new_top_bar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/back_icon_update_final"
                android:clickable="true"
                android:onClick="onClick" />

            <TextView
                android:id="@+id/txt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_back"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:fontFamily="@font/poppins_medium"
                android:onClick="onClick"
                android:text="@string/back"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/headertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/smoothning"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/rel_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <ImageButton
                android:id="@+id/btn_done"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/done_icon_update_final"
                android:clickable="true"
                android:onClick="onClick" />

            <TextView
                android:id="@+id/txt_done"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_done"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:fontFamily="@font/poppins_medium"
                android:onClick="onClick"
                android:text="@string/done"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/btn_tut"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/rel_done"
            android:background="@drawable/ic_tut"
            android:onClick="onClick"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_rel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lnAds"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/tbg_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@null" />

        <RelativeLayout
            android:id="@+id/main_img_bg_rel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/main_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@null" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lnAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer" />

    <RelativeLayout
        android:id="@+id/footer"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/smooth_rel"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp">

            <TextView
                android:id="@+id/txt_smooth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/smooth"
                android:fontFamily="@font/poppins_medium"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="0"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/txt_smooth" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/footer" />

    <View
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/header" />
</RelativeLayout>
